issues with dog pic spacing

--- a/src/assets/styles/components/bubble.module.scss
+++ b/src/assets/styles/components/bubble.module.scss
@@ -1,34 +1,38 @@
 @import '../globals';
 
 .chat {
-  background: $background;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-evenly;
-  align-content: center;
-  padding: 0.6875rem 0;
-  margin: 0 .5rem;
-  border-radius: 20px 20px 6px 6px;
+  // background: $background;
+  // display: flex;
+  // flex-flow: column nowrap;
+  // justify-content: space-evenly;
+  // align-content: center;
+  // padding: 0.6875rem 0;
+  // margin: 0 .5rem;
+  // border-radius: 20px 20px 6px 6px;
 
   div {
     font-size: 0.5rem;
     line-height: 0.6875rem;
     padding: 0.5rem;
-    // margin: 0.5rem;
+    margin: 0.25rem 0.5rem;
     width: 56%;
   }
   
   .walker {
     color: $chatRight;
     background: hsl(276, 41%, 93%);
-    align-self: flex-start;
+    float: left;
     border-radius: 0.25rem 0.625rem 0.625rem 0.625rem;
+  }
+
+  .photos {
+    
   }
   
   .customer {
     color: $chatRight;
     background: $white;
-    justify-self: flex-end;
+    float: right;
     border-radius: 0.625rem 0.625rem 0.25rem 0.625rem;
     box-shadow: 0px 10px 5px -5px rgba(62, 39, 83, 0.045318);
   }
