--- a/src/assets/styles/components/photos.module.scss
+++ b/src/assets/styles/components/photos.module.scss
@@ -1,16 +1,27 @@
 @import '../globals';
 
 .container {
-  width: 28%;
+  width: 100%;
   float: right;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
+  // justify-items: space-around;
   align-items: center;
 
+  div {
+    // width: 40px;
+    // height: 40px;
+    padding: .25rem;
+    // img {
+    //   width: 100%;
+    //   border-radius: 0.625rem;
+    //   box-shadow: 0px 10px 5px -5px rgba(62, 39, 83, 0.045318);
+    // }
+  }
+
   img {
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 40px;
+    height: 40px;
     border-radius: 0.625rem;
     box-shadow: 0px 10px 5px -5px rgba(62, 39, 83, 0.045318);
   }
