--- a/src/assets/styles/components/screen.module.scss
+++ b/src/assets/styles/components/screen.module.scss
@@ -7,7 +7,11 @@
 
   .chat {
     background: $background;
-    max-height: 20%;
-    height: 20%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
+    align-content: center;
+    padding: 0.6875rem 0;
+    // margin: 0 .5rem;
   }
 }
